Simploy runs tests in separate process to avoid memory leaks.